docs/spec/grammar/conformance/reject/15-trait-param-bound.myc
// rejected: a trait bound on a `type` declaration's type-parameter. In stage-1 (M-659 / RFC-0019
// §4.1) bounds live ONLY on function type-parameters — the dictionary site; data/trait type-params
// are unbounded abstractions. Writing `[A: Cmp]` on a `type` is a never-silent parse refusal (the
// bound is never silently dropped — G2), teaching the author to put the bound on the bounded `fn`.
// (The `impl … for …` / bounded-`fn` productions land with the trait checker, M-659.)
nodule demo;
type Box[A: Cmp] = Wrap(A)
